--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -36,6 +36,7 @@
         android:layout_width="@dimen/myicon"
         android:layout_height="@dimen/myicon"
         android:background="@null"
+        android:onClick="playSound"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/imvQuestion"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +49,7 @@
         android:id="@+id/bt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bt2"
@@ -60,6 +62,7 @@
         android:id="@+id/bt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/bt3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,6 +73,7 @@
         android:id="@+id/bt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/bt4"
         app:layout_constraintHorizontal_bias="0.5"
@@ -80,6 +84,7 @@
         android:id="@+id/bt4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
